# agent-workbench

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.en.md  README.md  README.zh.md  RELEASE_CHECKLIST.md  SECURITY.md  dont_touch_(APIKEY).md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  vite.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.scc/: docs.json  project.md
backend/: README.md  package-lock.json  package.json  tsconfig.json
docs/: DigDeeper.md  README.md  agent-workflow.md  architecture.md  cli.md  design-context-assembly.md  design-memory-system.md  experience.md
docs(knowlage)/: DigDeeper.md  experience.md  主流AI IDE核心设计经验深度研究与SCC-Batch Engine架构可行性分析.html  主流AI IDE核心设计经验深度研究与SCC-Batch Engine架构可行性分析.md
frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
native/: Cargo.toml  README.md
native/crates/scc-native-app/: Cargo.toml
native/crates/scc-native-app/src/: design.rs  main.rs
native/crates/scc-native-core/: Cargo.toml
native/crates/scc-native-core/src/: lib.rs  model.rs  permission.rs  runtime.rs  store.rs  tools.rs  trace.rs
native/crates/scc-native-shared/: Cargo.toml
native/crates/scc-native-shared/src/: lib.rs
scripts/: check-agent-workflow-guidance.mjs  check-api-route-coverage.mjs  check-docs.mjs  check-no-old-control.mjs  check-playwright-results.mjs  check-release-source.mjs  check-repo-delivery.mjs  check-repo-hygiene.mjs  check-secret-hygiene.mjs  check-sensitive-artifacts.mjs  check-temp-hygiene.mjs  check-web-budgets.mjs  clean-backend-runtime-state.mjs  clean-model-artifacts.mjs  clean-real-task-wave-state.mjs  clean-release-artifacts.mjs  clean-test-artifacts.mjs  compress_logos.py  dev.mjs  generate-real-task-manual-review.mjs  improvement-governance-audit.mjs  lesson-memory-dedupe-audit.mjs  live-model-smoke.mjs  (+37 more)
(+655 files in other folders)
